--- a/src/web/partial/header.html
+++ b/src/web/partial/header.html
@@ -29,8 +29,21 @@
     <div class="headcont">
         <a href="/{{lang}}/"><img class="site-logo" src="/static/img/common/header_logo_docs.png" alt="Monaca Docs" /></a>
         <nav class="global" data-pjax>
-            {{{globaltoc}}}
+            {{#if toctree}}
+                <!-- {{{globaltoc}}} -->
+                {{#is lang "ja"}}
+                    {{> navigation.ja }}
+                {{else}}
+                    {{> top_menu.en }}
+                {{/is}}
+            {{else}}
+                <div class="overview-btn">
+                    <p><a class="title" href="/en/quick_start/monaca_intro/">Monaca Overview</a></p>
+                </div>
+            {{/if}}
         </nav>
+
+
         <p class="version_selector">
             {{#if cordovaVersions}}
                 {{#is lang "ja"}}Cordova {{else}}Cordova {{/is}}
