[pofile] Reflect the translation.

--- a/src/web/partial/feedback.en.html
+++ b/src/web/partial/feedback.en.html
@@ -56,7 +56,7 @@
     var feedback = document.getElementById('feedback');
     var span = document.getElementsByClassName("close")[0];
 
-    var theUrl = "https://s2.monaca.mobi/ja/api/sendDocsFeedback";
+    var theUrl = "https://monaca.mobi/en/api/sendDocsFeedback";
     var token;
 
     var success_text = "";
