[update] Fixed side menu, font and color.

--- a/src/web/partial/header.html
+++ b/src/web/partial/header.html
@@ -67,7 +67,7 @@
         {{#if toctree}}
         {{else}}
             <aside class="top-page">
-                <div class="aside-search">
+                <div class="aside-search-left">
                     <script>
                         (function() {
                             var cx = (LANG === "ja") ? "007288577541380389757:mty_rw-k5qy" : " 007288577541380389757:dbehy9uu97o";
