--- a/src/web/static/css/_index.scss
+++ b/src/web/static/css/_index.scss
@@ -1,17 +1,18 @@
 /*NEW UI CSS*/
 
 @import url(https://fonts.googleapis.com/css?family=Product+Sans);
+@import url(https://fonts.googleapis.com/css?family=Raleway);
 
-body {
+/*body {
     background-color: #fbfbfb;
     color: #555;
-    font-family: 'Product Sans', 'Open Sans', 'ヒラギノ角ゴ Pro W3','Hiragino Kaku Gothic ProN W3','Hiragino Kaku Gothic ProN','メイリオ',Meiryo,'ＭＳ Ｐゴシック',sans-serif;
+    font-family: 'Raleway','Product Sans', 'Open Sans', 'ヒラギノ角ゴ Pro W3','Hiragino Kaku Gothic ProN W3','Hiragino Kaku Gothic ProN','メイリオ',Meiryo,'ＭＳ Ｐゴシック',sans-serif;
     -webkit-font-smoothing: antialiased;
     font-weight: 200;
     line-height: 21px;
     letter-spacing: 0;
     font-size: 16px;
-}
+}*/
 
 hr {
     border-bottom: 1px solid #ccc;
