--- a/src/web/static/css/_main.scss
+++ b/src/web/static/css/_main.scss
@@ -16,8 +16,8 @@ article.main {
   background-color: #fff;
   border: none;
   box-sizing: border-box;
-  color: #444;
-  float: left;
+  color: #000;
+  float: right;
   margin: 0;
   padding: 80px 30px 50px 30px;
   width: calc(100% - 288px);
