--- a/src/web/layout/layout.html
+++ b/src/web/layout/layout.html
@@ -112,11 +112,11 @@
         {{/is}}
     </div>
  
-	<div style="display:none;">
+<!-- 	<div style="display:none;">
 	    <div id="demo3_tip">
 	        
 	    </div>
-	</div>
+	</div> -->
 
     <a href="#top" class="scrollup">Scroll</a>
 
