--- a/src/web/static/css/common.css
+++ b/src/web/static/css/common.css
@@ -222,17 +222,17 @@ em {
   border: 1px solid #ccc;
   border-radius: 5px;
   background-color: #f5f5f5;
-  padding: 5px; }
+  padding: 3px 5px; }
 
 .menuselection {
   font-weight: bold;
   border: 1px solid #ccc;
   border-radius: 5px;
   background-color: #f5f5f5;
-  padding: 5px; }
+  padding: 3px 5px; }
 
 code {
-  padding: 5px;
+  padding: 3px 5px;
   font-size: 100%;
   color: #c7254e;
   background-color: #fff;
