--- a/src/web/static/css/common.scss
+++ b/src/web/static/css/common.scss
@@ -228,7 +228,7 @@ em {
   border: 1px solid #ccc;
   border-radius: 5px;
   background-color: #f5f5f5;
-  padding: 5px;
+  padding: 3px 5px;
 }
 
 .menuselection {
@@ -236,11 +236,11 @@ em {
   border: 1px solid #ccc;
   border-radius: 5px;
   background-color: #f5f5f5;
-  padding: 5px;
+  padding: 3px 5px;
 }
 
 code {
-    padding: 5px;
+    padding: 3px 5px;
     font-size: 100%;
     color: #c7254e;
     background-color: #fff;
