[update] Added direct translation to Debugger Tutorial page.

--- a/src/web/static/css/common.css
+++ b/src/web/static/css/common.css
@@ -1336,7 +1336,7 @@ aside.global {
     background-color: #5d89cb; }
   aside.global nav.aside-main {
     background-color: #f2f2f2;
-    /*padding-right: 10px;*/
+    padding-right: 10px;
     padding-left: 0px;
     padding-bottom: 20px;
     margin-right: 0;
