--- a/src/web/static/css/_aside.scss
+++ b/src/web/static/css/_aside.scss
@@ -95,7 +95,7 @@ aside.global {
   /* toc */
   nav.aside-main {
     background-color: #f2f2f2;
-    /*padding-right: 10px;*/
+    padding-right: 10px;
     padding-left: 0px;
     padding-bottom: 20px;
     margin-right: 0;
